ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combined-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx
  rules:
    - host: www.bahin-markpointnglimited.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80

    - host: grafana.bahin-markpointnglimited.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80

    - host: prometheus.bahin-markpointnglimited.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090

  tls:
    - hosts:
        - prometheus.bahin-markpointnglimited.com
        - grafana.bahin-markpointnglimited.com
        - www.bahin-markpointnglimited.com
      secretName: odin-secret
